correcting readability

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,10 @@ h1 {
     margin: 0 auto;
 }
 
+a {
+    color: white;
+}
+
 a:visited {
     color: white;
 }
